--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint", 
+    "server":"next build && next start"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
