--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-twitter-widgets": "^1.10.0",
-    "web3": "^1.6.1"
+    "web3": "^1.6.1", 
+    "minimist": ">=1.2.6"
   },
   "devDependencies": {
     "eslint": "7.32.0",
